# jh-hello-htmx

./: .gitignore  Cargo.toml  schema.sql  sqlx-data.json
.sqlx/: query-0546c9f38b16d8948b4c573ec614f9ff6c28a50c0006ec773e4180d7dded17e7.json  query-19b550df7db900654100e8734766d670fa28c5647fe8d28f0cd53acaa35acb50.json  query-70156c416105b36bc11b7a3975b694b952039ca239520dd742d746043e0851a9.json  query-bda945650fbc435d80278ad552a40b4193b3f449d0021f9900713e44fea1f101.json  query-c99acdbb51b76e12dcbd59a54378ef7e3e4a299c490dbe451637621d3267c6fa.json  query-dbe064d89203013a9ca9f8bfba181f2dcceb54795cf088c1180663f4632dd580.json
src/: lib.rs  main.rs
static/: edit_todo.html.hbs  index.html.hbs  saved_todo.html.hbs  todo-edit-add.html.hbs  todo.html.hbs
templates/: index.html.hbs
