[package]
name = "jh-hello-htmx"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
tokio = "1.28.2"
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
# note to self may need serde 1.0.148 and rocket might need features = ["json"]
serde = "1.0.164"
# profanity filter
rustrict = "0.7.7"

# below is all the shuttle stuff that replaces infrastructure.
shuttle-rocket = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-static-folder = "0.27.0"
shuttle-secrets = "0.27.0"
shuttle-shared-db = { version = "0.27.0", features = ["postgres"]}


