[package]
name = "jh-hello-htmx"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
tokio = "1.35.1"
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }
serde = "1.0.196"
# profanity filter.   Seems to need to be pinned to 0.7.12 because that is what shuttle wants.
rustrict = "0.7.12"

# below is all the shuttle stuff that replaces infrastructure.
shuttle-rocket = "0.37.0"
shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-shared-db = { version = "0.37.0", features = ["postgres", "sqlx"]}

[profile.release]
# v This is now used by default, if not provided
# as per https://kobzol.github.io/rust/cargo/2024/01/23/making-rust-binaries-smaller-by-default.html
# can probably remove after next rust version (currently I have 1.75)
strip = "debuginfo"

